[package]
name = "tmatebot"
version = "1.0.0"
authors = ["Rosy.iso"]
edition = "2021"
rust-version = "1.80"
description = "Discord bot to run instances of tmate"
repository = "https://github.com/Maiori44/tmatebot"
license = "Zlib"
keywords = ["discord", "bot", "tmate"]

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "fs", "process"] }
serenity = { version = "0.12.2", default-features = false, features = [
	"client",
	"builder",
	"cache",
	"collector",
	"model",
	"utils",
	"gateway",
	"rustls_backend",
] }
owo-colors = "4.0.0"
phf = { version = "0.11.2", features = ["macros"] }
sha256 = "1.5.0"
circular-buffer = "0.1.7"
